# storage/api-docs/api-docs.json
@@ -137,38 +137,12 @@
                 }
             }
         },
-        "/api/signout": {
-            "get": {
-                "tags": [
-                    "회원"
-                ],
-                "summary": "로그아웃",
-                "description": "로그아웃 API",
-                "responses": {
-                    "200": {
-                        "description": "로그아웃 메시지를 반환합니다.",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "$ref": "#/components/schemas/ResponseSignout"
-                                }
-                            }
-                        }
-                    }
-                },
-                "security": [
-                    {
-                        "bearer_token": []
-                    }
-                ]
-            }
-        },
         "/api/users/details": {
             "get": {
                 "tags": [
                     "회원"
                 ],
-                "summary": "회원 상세정보 조회",
+                "summary": "회원 상세정보",
                 "description": "회원 상세정보 조회 API",
                 "responses": {
                     "200": {
@@ -221,13 +195,15 @@
                         }
                     }
                 }
-            },
+            }
+        },
+        "/api/users/search": {
             "post": {
                 "tags": [
                     "회원"
                 ],
-                "summary": "회원목록",
-                "description": "회원목록 조회 API",
+                "summary": "회원검색",
+                "description": "회원검색(이름, 이메일) API",
                 "requestBody": {
                     "required": true,
                     "content": {
@@ -260,6 +236,32 @@
                         }
                     }
                 }
+            }
+        },
+        "/api/signout": {
+            "get": {
+                "tags": [
+                    "회원"
+                ],
+                "summary": "로그아웃",
+                "description": "로그아웃 API",
+                "responses": {
+                    "200": {
+                        "description": "로그아웃 메시지를 반환합니다.",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/ResponseSignout"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "bearer_token": []
+                    }
+                ]
             }
         }
     },
